# flask-flasquiz

./: LICENSE  README.md  config.py  pyproject.toml  quiz.json  requirements.txt  run.py
app/: __init__.py  storage.db
app/controller/: index.py
app/model/: scoreboard.py
app/static/css/: global.css
app/templates/: base.html  index.html  result.html  scoreboard.html
flasquiz/: __init__.py
flasquiz/controller/: index.py
flasquiz/model/: scoreboard.py
flasquiz/templates/: index.html
migrations/versions/: 8b39624cddb9_initial_migration.py
