[tool.poetry]
name = "flasquiz"
version = "0.1.0"
description = "Aplicativo de quiz, feito em Flask, para a matéria Programação Web."
authors = ["Natália Fonseca <nataliabf@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
